--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
